  * Fix the order of fork/setsid and pidfile creation. (thanks Nick Welch)

1.0.1 (2008-09-24)
==================

  * Split everything besides the daemon and example client into its
    own package (ears). Unrelated players can now depend on us, and
    distributions can package us, without dragging in things they may not
    want (MusicBrainz, cdparanoia).

  * Moved lastmp to a "contrib" subdirectory to emphasize the fact that
    this package is not just for MPD; only the 250 lines of our flagship
    example are.

  * Fixed a possible crash when lastfmsubmitd is fed malformed YAML.

0.37 (2008-01-07)
=================

  * Close file descriptors, etc, when daemonizing.

  * Add missing import in client.py.

0.36 (2007-10-27)
=================

  * Client interface has totally changed (see README.plugins). All problems
    regarding spool path etc. not being honored should be fixed.

  * Write pidfile even if --no-daemon, so we don't crash. Unnecessary, but
    easier for now.

  * Read sleep time correctly in config.

  * Fix sox error in peel -c.

  * Fix peelrc [options] section parsing.

  * Add --encoder option in peel.

0.35 (2007-03-29)
=================

  * Fix crash when a buggy MPD reports the length of a track as zero.

0.34 (2007-03-26)
=================

  * Sort submissions by time if several spool files are read in one go, to
    avoid erroneously triggering the spam filter (thanks to Steve Hill and
    a cast of thousands).

  * Suppress extra warnings if lastmp cannot connect to MPD.

  * Fixed creation of Unicode filenames, songs with slashes, and -d option
    parsing in peel. Also, actually install it.

0.33 (2006-07-31)
=================

  * Improved some documentation.

  * If there is no account information set, print a warning and exit
    normally, instead of panicking. (Reported by Joey Hess.)

0.32 (2006-07-08)
=================

  * Added peel, a simple CD ripper for use with mbget which pipes audio